ya no nos denuncian

--- a/single-standard.html
+++ b/single-standard.html
@@ -170,7 +170,10 @@ The sun is uniquely placed to be the centerpiece of our solar system. It has the
 	  <div class="row">
 		<div class="col-twelve">
 		  <div class="copyright">
-			<span>© Copyright MultitecUA</span>
+			<span
+			>Template by
+			<a href="http://www.styleshout.com/">styleshout</a></span
+		  >
 		  </div>
 
 		  <div id="go-top">
