--- a/index.html
+++ b/index.html
@@ -334,7 +334,10 @@
         <div class="row">
           <div class="col-twelve">
             <div class="copyright">
-              <span>© Copyright MultitecUA</span>
+              <span
+                >Template by
+                <a href="http://www.styleshout.com/">styleshout</a></span
+              >
             </div>
 
             <div id="go-top">
