--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
           <ul class="main-navigation sf-menu">
             <li class="current"><a href="index.html" title="">Home</a></li>
             <li class="has-children">
-              <a href="category.html" title="">Categories</a>
+              <a href="#" title="">Categories</a>
               <ul class="sub-menu">
-                <li><a href="category.html">Wordpress</a></li>
-                <li><a href="category.html">HTML</a></li>
-                <li><a href="category.html">Photography</a></li>
-                <li><a href="category.html">UI</a></li>
-                <li><a href="category.html">Mockups</a></li>
-                <li><a href="category.html">Branding</a></li>
+                <li><a href="#">Wordpress</a></li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">Photography</a></li>
+                <li><a href="#">UI</a></li>
+                <li><a href="#">Mockups</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
             </li>
             <li class="has-children">
-              <a href="single-standard.html" title="">Blog</a>
+              <a href="#" title="">Blog</a>
               <ul class="sub-menu">
-                <li><a href="single-video.html">Video Post</a></li>
-                <li><a href="single-audio.html">Audio Post</a></li>
-                <li><a href="single-gallery.html">Gallery Post</a></li>
-                <li><a href="single-standard.html">Standard Post</a></li>
+                <li><a href="#">Video Post</a></li>
+                <li><a href="#">Audio Post</a></li>
+                <li><a href="#">Gallery Post</a></li>
+                <li><a href="#">Standard Post</a></li>
               </ul>
             </li>
-            <li><a href="style-guide.html" title="">Styles</a></li>
-            <li><a href="about.html" title="">About</a></li>
-            <li><a href="contact.html" title="">Contact</a></li>
+            <li><a href="#" title="">Styles</a></li>
+            <li><a href="#" title="">About</a></li>
+            <li><a href="#" title="">Contact</a></li>
           </ul>
         </nav>
         <!-- end main-nav-wrap -->
@@ -306,49 +306,49 @@
 
     <!-- footer
    ================================================== -->
-    <footer>
-      <div class="footer-main">
-        <div style="display: flex; align-items: center">
-          <div class="col-three tab-full mob-full footer-info">
-            <img src="images/MULTITEClogo2022-01.png" />
-          </div>
-          <div class="col-three tab-full mob-full footer-info">
-            <img
-              src="https://www.nasa.gov/sites/default/files/thumbnails/image/spaceappschallenge_logo.png"
-            />
-          </div>
-          <div class="col-two tab-full mob-full footer-info">
-            <img
-              src="https://sa-2019.s3.amazonaws.com/media/images/logo_nasa2x.original.png"
-            />
-          </div>
-          <!-- end footer-info -->
-
-          <!-- end subscribe -->
-        </div>
-        <!-- end row -->
+   <footer>
+    <div class="footer-main">
+      <div class="row" style="display: flex; align-items: center">
+      <div class="col-four">
+        <img src="images/MULTITEClogo2022-01.png" />
       </div>
-      <!-- end footer-main -->
-
-      <div class="footer-bottom">
-        <div class="row">
-          <div class="col-twelve">
-            <div class="copyright">
-              <span
-                >Template by
-                <a href="http://www.styleshout.com/">styleshout</a></span
-              >
-            </div>
-
-            <div id="go-top">
-              <a class="smoothscroll" title="Back to Top" href="#top"
-                ><i class="icon icon-arrow-up"></i
-              ></a>
-            </div>
-          </div>
+      <div class="col-four">
+        <img
+        src="https://www.nasa.gov/sites/default/files/thumbnails/image/spaceappschallenge_logo.png"
+        />
+      </div>
+      <div class="col-three">
+        <img
+        src="https://sa-2019.s3.amazonaws.com/media/images/logo_nasa2x.original.png"
+        />
+      </div>
+      <!-- end footer-info -->
+  
+      <!-- end subscribe -->
+      </div>
+      <!-- end row -->
+    </div>
+    <!-- end footer-main -->
+  
+    <div class="footer-bottom">
+      <div class="row">
+      <div class="col-twelve">
+        <div class="copyright">
+        <span
+          >Template by
+          <a href="http://www.styleshout.com/">styleshout</a></span
+        >
+        </div>
+  
+        <div id="go-top">
+        <a class="smoothscroll" title="Back to Top" href="#top"
+          ><i class="icon icon-arrow-up"></i
+        ></a>
         </div>
       </div>
-      <!-- end footer-bottom -->
+      </div>
+    </div>
+    <!-- end footer-bottom -->
     </footer>
 
     <div id="preloader">
