--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
     <!-- footer
    ================================================== -->
-    <footer>
+    <footer style="background-color: gray">
       <div class="footer-main">
         <div class="row" style="display: flex; align-items: center">
           <div class="col-four">
@@ -375,7 +375,7 @@
         <div class="row">
           <div class="col-twelve">
             <div class="copyright">
-              <span
+              <span style="color: white"
                 >Template by
                 <a href="http://www.styleshout.com/">styleshout</a></span
               >
