--- a/deleted_pages/single-audio.html
+++ b/deleted_pages/single-audio.html
@@ -64,7 +64,7 @@
             <li class="has-children current">
               <a href="single-standard.html" title="">Blog</a>
               <ul class="sub-menu">
-                <li><a href="single-video.html">Video Post</a></li>
+                <li><a href="Sun.html">Video Post</a></li>
                 <li><a href="single-audio.html">Audio Post</a></li>
                 <li><a href="single-gallery.html">Gallery Post</a></li>
                 <li><a href="single-standard.html">Standard Post</a></li>
