Some styles refactored

--- a/HeliofysicsDivision.html
+++ b/HeliofysicsDivision.html
@@ -201,7 +201,8 @@
 
     <!-- footer
    ================================================== -->
-    <footer style="background-color: gray">
+    <hr class="footer-hr" />
+    <footer>
       <div class="footer-main">
         <div class="row" style="display: flex; align-items: center">
           <div class="col-four">
@@ -229,7 +230,7 @@
         <div class="row">
           <div class="col-twelve">
             <div class="copyright">
-              <span style="color: white"
+              <span style="color: gray"
                 >Template by
                 <a href="http://www.styleshout.com/">styleshout</a></span
               >
