--- a/Sun.html
+++ b/Sun.html
@@ -147,18 +147,21 @@
                 all life. Without the Sun, there would be no life on Earth. The
                 Sun is also the largest object in our solar system. Its gravity
                 holds everything in our solar system together. The Sun is so big
-                that it would take 1.3 million Earths to fill it up. The hottest
-                part of the Sun is its core, where temperatures can reach up to
-                15 million degrees Celsius. The Sun is constantly active, and
-                its eruptions and charged particles can influence the nature of
-                space throughout the solar system. NASA and other international
-                space agencies study the Sun 24/7 in order to better understand
-                it. Sun-exploring spacecraft include Parker Solar Probe, Solar
-                Orbiter, SOHO, ACE, IRIS, WIND, Hinode, Solar Dynamics
-                Observatory, and STEREO.
+                that it would take 1.3 million Earths to fill it up.
               </p>
 
-              <p><img src="images/shutterbug.jpg" alt="" /></p>
+              <img src="images/sun.png" class="center-image" width="450" />
+
+              <p>
+                The hottest part of the Sun is its core, where temperatures can
+                reach up to 15 million degrees Celsius. The Sun is constantly
+                active, and its eruptions and charged particles can influence
+                the nature of space throughout the solar system. NASA and other
+                international space agencies study the Sun 24/7 in order to
+                better understand it. Sun-exploring spacecraft include Parker
+                Solar Probe, Solar Orbiter, SOHO, ACE, IRIS, WIND, Hinode, Solar
+                Dynamics Observatory, and STEREO.
+              </p>
             </div>
             <!-- end entry-primary -->
           </article>
@@ -171,7 +174,8 @@
 
     <!-- footer
    ================================================== -->
-    <footer style="background-color: gray">
+    <hr class="footer-hr" />
+    <footer>
       <div class="footer-main">
         <div class="row" style="display: flex; align-items: center">
           <div class="col-four">
@@ -199,7 +203,7 @@
         <div class="row">
           <div class="col-twelve">
             <div class="copyright">
-              <span style="color: white"
+              <span style="color: gray"
                 >Template by
                 <a href="http://www.styleshout.com/">styleshout</a></span
               >
