--- a/solar-variability.html
+++ b/solar-variability.html
@@ -215,6 +215,7 @@
 
     <!-- footer
    ================================================== -->
+    <hr class="footer-hr" />
     <footer>
       <div class="footer-main">
         <div class="row" style="display: flex; align-items: center">
@@ -243,7 +244,7 @@
         <div class="row">
           <div class="col-twelve">
             <div class="copyright">
-              <span
+              <span style="color: gray"
                 >Template by
                 <a href="http://www.styleshout.com/">styleshout</a></span
               >
